промежуточный коммит